--- a/GUIADMIN/Views/Mantenedor/Categoria.cshtml
+++ b/GUIADMIN/Views/Mantenedor/Categoria.cshtml
@@ -4,7 +4,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
  
-
 <ol class="breadcrumb mb-4 mt-4">
     <li class="breadcrumb-item"><a href="#">Mantenimiento</a></li>
     <li class="breadcrumb-item active">Categorias</li>
@@ -40,7 +39,7 @@
 
     <!-- Start modal data-bs-backdrop="static" evita que se cierre al hacer click en otro lugar fuera del modal-->
 
-    <div class="modal fade" id="AddCategoryModal" tabindex="-1" aria-labelledby="addCategoryModalLabel" aria-hidden="true" data-bs-backdrop="static">
+    <div class="modal fade" id="AddCategoryModal" tabindex="-1" aria-labelledby="addCategoryModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header bg-dark text-white">
@@ -164,23 +163,23 @@
         var data = tblData.row(selectedCategory).data();
         console.log(data);
 
+        $("#sidebar").removeAttr("aria-hidden")
+
         Swal.fire({
             title: "ELIMINAR",
-            text: "Està seguro de eliminar?",
+            text: "¿Está seguro de eliminar?",
             icon: "warning",
             showCancelButton: true,
             confirmButtonColor: "#3085d6",
             cancelButtonColor: "#d33",
-            confirmButtonText: "Si, eliminar!",
-            focusConfirm: false,
-            //closeOnConfirm: false
-        }),
-        function () {
-            if (isConfirm) {
+            confirmButtonText: "Sí, eliminar!",
+            focusConfirm: false
+        }).then((result) => {
+            if (result.isConfirmed) {
                 jQuery.ajax({
                     url: '@Url.Action("EliminarCategoria", "Mantenedor")',
                     type: "POST",
-                    data: JSON.stringify({ id: data.IdCategory }),
+                    data: JSON.stringify({ id: data.IdCategoria }),
                     dataType: "json",
                     contentType: "application/json; charset=utf-8",
                     success: function (data) {
@@ -193,10 +192,12 @@
                     error: function (error) {
                         console.log(error);
                     }
-                })
+                });               
             }
-        }
+        });
+            $("#sidebar").attr("aria-hidden", "true");
     });
+
 
     function Guardar() {
         var category = {
