--- a/GUIADMIN/Views/Mantenedor/Categoria.cshtml
+++ b/GUIADMIN/Views/Mantenedor/Categoria.cshtml
@@ -11,7 +11,7 @@
 
 <div class="card">
     <div class="card-header">
-        <i class="fas fa-users"></i> Lista de Categorias
+        <i class="fas fa-table"></i> Lista de Categorias
     </div>
     <div class="card-body">
         <div class="row">
