--- a/GUIADMIN/Views/Mantenedor/Producto.cshtml
+++ b/GUIADMIN/Views/Mantenedor/Producto.cshtml
@@ -11,7 +11,7 @@
 
 <div class="card">
     <div class="card-header">
-        <i class="fas fa-users"></i> Lista de Productos
+        <i class="fas fa-boxes"></i> Lista de Productos
     </div>
     <div class="card-body">
         <div class="row">
